# compare-the-word

./: .gitignore  Cargo.toml  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
conf/: rate_limit.conf
frontend/: Dockerfile  next.config.ts
frontend/app/: ControlBar.tsx  SearchOverlay.tsx  VerseAnchor.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
proxy/: nginx.local.conf
